--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,8 @@
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
+
+*{
+    margin: 0;
+    font-family: "Public Sans", sans-serif;
+}
