--- a/src/app.css
+++ b/src/app.css
@@ -2,6 +2,22 @@
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
 
-*{
-    font-family: "Public Sans", sans-serif;
+* {
+	font-family: 'Public Sans', sans-serif;
 }
+.container {
+	width: 100%;
+	padding-right: 15px;
+	padding-left: 15px;
+	margin-right: auto;
+	margin-left: auto;
+}
+.site-navbar {
+	margin-bottom: 0px;
+	z-index: 1999;
+	position: relative;
+	top: 0;
+	width: 100%;
+	padding: 1rem;
+	position: absolute;
+  }
